css/desktop.css
#map {
    flex: 1;
}

/*-------------------------------------------------*/
/*SPECIFIC TO NON-MOBILE*/
/*-------------------------------------------------*/
.headline-content {
    font-size: 10pt;
}

.headline.showing .headline-content {
    max-height: 9999px;
}

body {
    display: flex;
}

.headline {
    margin-bottom: 7.5px;
}

.headline.focus .headline-card {
    box-shadow: 0px 0px 20px 0px rgba(243, 165, 115, 0.50) !important;
}

#bar-left {
    flex-shrink: none;
    flex-grow: none;
    background-color: rgb(252, 252, 252);
    display: flex;
    flex-direction: column;
    z-index: 1000;

    -webkit-box-shadow: 2px 0px 6px -2px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 2px 0px 6px -2px rgba(0, 0, 0, 0.2);
    box-shadow: 2px 0px 6px -2px rgba(0, 0, 0, 0.2);
}

#bar-left>*:not(:last-child) {
    padding: 15px;
}

#headlines_container {
    /*this is ugly but works*/
    height: calc(100vh - 10em - 30px);
    overflow: auto;
}

#headlines_desktop {
    margin-left: -15px;
    margin-right: -15px;

    /*Take available space*/
    flex-basis: 1;
    overflow: auto;
    min-height: 0;

    display: flex;
    flex-direction: column;
}

/*#headlines_desktop> :last-child {
    margin-bottom: 10px;
}

#headlines_desktop>*:not(:last-child) {
    margin-bottom: 0.5em;
}*/

#top-bar {
    flex-grow: 0;
    flex-shrink: 0;

    display: flex;
    flex-direction: column;

    z-index: 999;
    -webkit-box-shadow: 0px 10px 8px -4px rgba(0, 0, 0, 0.075);
    -moz-box-shadow: 0px 10px 8px -4px rgba(0, 0, 0, 0.075);
    box-shadow: 0px 10px 8px -4px rgba(0, 0, 0, 0.075);
}

#top-bar-logo {
    flex-basis: 3em;
    flex-grow: 0;
    flex-shrink: 0;

    display: flex;
    flex-direction: row;
    margin-top: -0.2em;
    margin-bottom: 0.5em;
}
#top-bar-logo img {
    flex-basis: 40px;
    width: 40px;
    align-self: center;
}
#top-bar-logo span.title {
    flex: 0 0 0;
    align-self: center;
    padding-left: 10px;
    font-weight: 600;
    font-size: 12pt;
}

#top-bar-logo div.link {
    flex-grow: 1;
    font-size: 9pt;
    text-align: right;
    text-decoration: underline;
}
#top-bar-logo div.link span {
    cursor: pointer;
}

#top-bar-selectors {
    display: flex;
    height: 2.38em;
}
#top-bar-sourceselector {
    margin-right: 0.5em;
}
#top-bar-searchbar {
    flex: 1;
    transition: margin-left 0.5s ease-in-out;
}

#about {
    position: absolute;
    width: 100vw;
    height: 100vh;
    z-index: 100001;
    background-color: white;
    padding: 20%;
}

#about.hide {
    display: none;
}

#about > img {
    width: 1em;
}

#about > .close {
    position: absolute;
    right: 10%;
    top: 10%;
    font-size: 30pt;
}

#headlines-navigation {
    display: flex;
    justify-content: center;

    height: 3em;

    padding: 10px;

    z-index: 1001;
    -webkit-box-shadow: 0px -10px 8px -4px rgba(0, 0, 0, 0.075);
    -moz-box-shadow: 0px -10px 8px -4px rgba(0, 0, 0, 0.075);
    box-shadow: 0px -10px 8px -4px rgba(0, 0, 0, 0.075);
}

/*>>> PAGE PICKER*/
.page-link {
    height: 2.2em;
}

.page-item .selected {
    background-color: lightgray;
}

@media only screen and (max-width: 1000px) {
    #bar-left {
        flex-basis: 16em;
        max-width: 16em;
    }

    #top-bar-searchbar:hover {
        margin-left: -7em;
        transition: margin-left 0.5s ease-in-out;
    }

    #headlines_container {
        /*this is ugly but works*/
        height: calc(100vh - 10em - 20px);
    }

    #headlines-navigation {
        height: 2em;
    }

    .page-link {
        line-height: 9pt;
        font-size: 10pt;
    }

    .page-link i {
        line-height: 10pt;
    }

}

@media only screen and (min-width: 1000px) {
    #bar-left {
        flex-basis: 22em;
        max-width: 22em;
    }
}


@media only screen and (min-width: 1300px) {
    #bar-left {
        flex-basis: 24em;
        max-width: 24em;
    }
}

